--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "framer": "^1.2.9",
+    "framer-motion": "^2.9.4",
     "nanoid": "^3.1.16",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
