--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "animate.css": "^4.1.1",
     "framer-motion": "^2.9.4",
     "nanoid": "^3.1.16",
-    "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-player": "^2.7.0",
     "react-scripts": "4.0.0",
+    "sass": "^1.69.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
